[gd_scene load_steps=4 format=3 uid="uid://c3urepqfwemrw"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_csakl"]
[ext_resource type="Texture2D" uid="uid://df8eengm018fc" path="res://Assets/Sprites/MenuItems/x_button.png" id="2_5b57h"]
[ext_resource type="Texture2D" uid="uid://dmn1yje0a0urn" path="res://Assets/Sprites/Black.png" id="2_8iy1e"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_csakl")

[node name="Black" type="Sprite2D" parent="."]
position = Vector2(586.25, 340.75)
scale = Vector2(3.1481, 2.53093)
texture = ExtResource("2_8iy1e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -25.0
offset_right = 481.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="FX" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/FX"]
layout_mode = 2
size_flags_horizontal = 0
text = "FX Volume           "

[node name="FXVolume" type="HSlider" parent="VBoxContainer/FX"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
value = 80.0
tick_count = 10

[node name="Music" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 0
text = "Music Volume     "

[node name="MusicVolume" type="HSlider" parent="VBoxContainer/Music"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
value = 80.0
tick_count = 10

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = -1.0
offset_right = 76.0
offset_bottom = 127.0
grow_horizontal = 0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("2_5b57h")

[connection signal="drag_ended" from="VBoxContainer/FX/FXVolume" to="." method="_on_fx_volume_drag_ended"]
[connection signal="drag_ended" from="VBoxContainer/Music/MusicVolume" to="." method="_on_music_volume_drag_ended"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
